fixed some overflow-x

--- a/css/doacaoStyle.css
+++ b/css/doacaoStyle.css
@@ -20,9 +20,7 @@
 }
 
 body {
-    background-color: #FFFAE1;
-    overflow-x: hidden;
-   
+    background-color: #FFFAE1;   
 }
 
 /*nav*/
@@ -47,9 +45,8 @@ body {
 }
 
 .container-main {
-    width: 100vw;
+    width: 100%;
     height: 50vh;
-
 }
 
 .container-main img {
@@ -118,7 +115,7 @@ footer {
 }
 
 #container-footer {
-    width: 100vw;
+    width: 100%;
     height: 25vh;
     display: flex;
     justify-content: space-around;
@@ -163,7 +160,7 @@ footer {
 
 #sub-footer {
     width: 100%;
-    padding: 1vh;
+    padding: 1% 0%;
     display: flex;
     justify-content: center;
 }
