--- a/css/mainPageStyle.css
+++ b/css/mainPageStyle.css
@@ -30,8 +30,6 @@ a {
 body {
     min-width: 100vw;
     min-height: 100vh;
-    overflow-x: hidden;
-
 }
 
 body::-webkit-scrollbar {
@@ -49,7 +47,7 @@ body::-webkit-scrollbar-thumb {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center bottom;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
 }
 
@@ -191,7 +189,7 @@ body::-webkit-scrollbar-thumb {
 }
 
 .about-us-background-and-content h2 {
-    margin: 0% 0% 5% 0%;
+    margin-bottom: 5%;
     white-space: nowrap;
 }
 
@@ -212,6 +210,7 @@ body::-webkit-scrollbar-thumb {
 
 #about-us-image{
     height: 100%;
+    overflow: hidden;
 }
 
 #about-us-image img {
@@ -260,9 +259,9 @@ body::-webkit-scrollbar-thumb {
 
 .informative-project-text-container {
     height: 40vh;
-    width: 30vw;
+    width: 30%;
     padding: 15px;
-    color: rgb(0, 0, 0);
+    color: #000000;
     background-color: #e9d2a0;
     border-radius: 20px;
     font-size: 1.2em;
@@ -289,7 +288,7 @@ body::-webkit-scrollbar-thumb {
 }
 
 #subtitle-project-list {
-    width: 100vw;
+    width: 100%;
     display: flex;
     justify-content: center;
 }
@@ -302,13 +301,12 @@ body::-webkit-scrollbar-thumb {
 }
 
 #project-cards-container {
-    width: 100vw;
+    width: 100%;
     height: 100%;
     padding-bottom: 10%;
-    border: 2px solid black;
     display: grid;
     justify-content: center;
-    grid-template-columns: 18vw 18vw 18vw;
+    grid-template-columns: 18% 18% 18%;
     grid-template-rows: 450px 450px 450px;
     row-gap: 20%;
     column-gap: 15%;
@@ -318,8 +316,7 @@ body::-webkit-scrollbar-thumb {
     background-color: turquoise;
     border: 2px solid black;
     display: flex;
-    justify-content: center;
-    align-items: end;
+    justify-content: center;    
 }
 
 .project-cards-description {
@@ -327,7 +324,6 @@ body::-webkit-scrollbar-thumb {
     height: 40%;
     background-color: #ffffff;
     margin-top: 20px;
-    overflow-y: visible;
 }
 
 
@@ -345,7 +341,7 @@ body::-webkit-scrollbar-thumb {
 
 #donate-child-container-img {
     height: 100%;
-    width: 35vw;
+    width: 35%;
 }
 
 #donate-child-img{
@@ -358,7 +354,7 @@ body::-webkit-scrollbar-thumb {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 60vw;
+    width: 60%;
     height: 100%;
     text-align: center;
 }
@@ -369,8 +365,7 @@ body::-webkit-scrollbar-thumb {
 
 #donate-container p {
     font-size: 1.2em;
-    margin-top: 5%;
-    margin-bottom: 7%;
+    margin: 5% 0% 7% 0%;
     width: 80%;
     line-height: 1.6em;
 }
@@ -416,13 +411,13 @@ body::-webkit-scrollbar-thumb {
 }
 
 #informative-schedule-bunny-img {
-    width: 28vw;
+    width: 28%;
 }
 
 #schedule-text-container {
     height: fit-content;
-    width: 100vw;
-    padding: 20px;
+    width: 100%;
+    padding: 20px 0px;
     display: flex;
     align-items: center;
     background-color: #ada35dc2;
@@ -430,8 +425,8 @@ body::-webkit-scrollbar-thumb {
 }
 
 .informative-schedule-text-container {
-    height: 40vh;
-    width: 30vw;
+    height: 40%;
+    width: 30%;
     padding: 15px;
     color: rgb(0, 0, 0);
     border-radius: 20px;
@@ -449,7 +444,7 @@ body::-webkit-scrollbar-thumb {
 }
 
 #subtitle-schedule-list {
-    width: 100vw;
+    width: 100%;
     display: flex;
     justify-content: center;
 }
@@ -499,7 +494,7 @@ body::-webkit-scrollbar-thumb {
     justify-content: center;
     top: 50%;
     left: 33%;
-    width: 8vw;
+    width: 8%;
     height: 5.5vh;
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
@@ -531,7 +526,7 @@ footer {
 
 #background-line-fale-conosco {
     width: 100%;
-    padding: 0.4%;
+    padding: 0.4% 0%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -595,7 +590,7 @@ footer {
 
 #sub-footer {
     width: 100%;
-    padding: 1vh;
+    padding: 1% 0%;
     display: flex;
     justify-content: center;
 }
